--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,8 @@
 .header{
     display: flex;
+    
     flex-direction: row;
-    background-color: rgba(233, 229, 229,.3);
+    background-color: rgb(233, 229, 229,);
     align-items: center;
     justify-content: space-around;
     position:fixed;
@@ -16,17 +17,17 @@
     font-weight: bold;
     color:rgb(20, 109, 20);
 }
-ul{
+.lists>ul{
     list-style: none;
     display: flex;
     flex-direction: row;
     gap:20px;
 }
-ul>li{
+.lists>ul>li{
     cursor:pointer;
     transition:all 0.3s ease;
 }
-ul>li:hover{
+.lists>ul>li:hover{
     scale:1.1;
     opacity: .6;
 }
@@ -36,9 +37,10 @@ ul>li:hover{
     align-items: center;
     gap:20px;
 }
-input{
+.search>input{
     outline: none;
     border:none;
+    width:100%;
     background-color: inherit;
 }
 .search{
