--- a/src/pages/items.css
+++ b/src/pages/items.css
@@ -3,9 +3,9 @@
   padding: 10px;
 }
 .items_child > img {
-  width: 90px;
+  width: 200px;
   height: 120px;
-  object-fit: cover;
+  object-fit: contain;
 }
 .items_child {
   display: flex;
@@ -19,4 +19,22 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+}
+.light{
+  background-color:white;
+  
+}
+.dark{
+  background-color:rgb(149, 140, 140);
+}
+.heading_top{
+  width: 95%;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  border-bottom:2px solid lightgray
+}
+.heading_top>button{
+  padding: 6px;
+  height: 50px;
 }
