--- a/src/pages/Admin.css
+++ b/src/pages/Admin.css
@@ -1,5 +1,5 @@
 .admin{
-    position: relative;
+    /* position: relative; */
     display: flex;
     top: 0;
     left: 0;
@@ -10,6 +10,7 @@
 .admin_navbar{
     display: flex;
     flex: 7;
+    z-index:20;
     position: fixed;
     top: 0;
     left: 0;
@@ -27,7 +28,7 @@
 }
 .openNav{
     margin-left: 25%;
-    /* flex:none; */
+    
 }
 .closeSidebar{
     
@@ -51,7 +52,7 @@
     gap: 3px;
 
 }
-.avatar{
+.avatar1{
     width: 45px;
     height: 45px;
     object-fit: cover;
@@ -95,8 +96,9 @@
    display: flex; 
    align-items: center;
    justify-content: center;
-   
-   
+   cursor:pointer;
+   padding: 30px;
+    
    
 
 }
@@ -108,8 +110,10 @@
     
     
 }
-.sideItem{
-    padding: 30px;
+.sideItem:hover{
+   opacity:0.3; 
+   color:blue;
+   transition: .4s ease;
 }
 .sideNotification{
     display: flex;
@@ -126,6 +130,9 @@
     background-color: rgb(199, 196, 196);
     height: 100px;
     overflow:auto;
+}
+.sideNotificationDetails::-webkit-scrollbar{
+    display:none;
 }
 .oneItem{
     gap:20px;
@@ -151,10 +158,12 @@
 }
 .main{
     width:100vw;
+    
     position:fixed;
     top:60px;
     left:0px;
     height:calc(100vh - 60px);
+    background-color: rgb(99, 93, 93);
     transition: margin-left 0.5s ease;
 }
 
