--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,7 @@
 .home{
-    /* position:absolute;
+    position:fixed;
     top: 0;
-    left: 0; */
+    left: 0;
     display: flex;
     margin-top:80px;
     align-items: center;
@@ -14,23 +14,27 @@
 .title{
     display: flex;
     align-items: center;
-    /* flex:1; */
+    
     justify-content: center;
     padding: 5px;
     box-shadow: 0px 0px 25px -10px lightgray;
     width: 60%;
 
 }
-.title>ul{
+.title ul{
     width: 100%;
     display: flex;
     justify-content: space-around;
+    
 }
-.title>ul>li{
+.title ul li{
     gap:10px;
+    list-style:none;
+    
 }
 .content_body{
-    position: relative;
+    
+    height:75%;
     width: 100%;
     background-color: rgba(233, 229, 229,.3);
     margin-top: 10px;
@@ -40,6 +44,7 @@
     flex:7;
     padding-left: 3px;
     transition: all  3s ease-out;
+    z-index:1;
 
 }
 .content_image{
@@ -47,6 +52,8 @@
     align-items: center;
     width: 70%;
     height: 90%;
+    
+    
     
     
 }
@@ -69,10 +76,11 @@
 .content_image>img{
     border:2px solid white;
     border-radius: 6px;
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+    width: 90%;
+    height: 70%;
+    object-fit: contain;
 }
+
 .controls{
     position:fixed;
     z-index: 88;
